Fixed Z-index with search bar

--- a/DS-Web-App/src/components/Home.css
+++ b/DS-Web-App/src/components/Home.css
@@ -7,6 +7,8 @@
     margin-top: 1.3vh;
     width: 70vw;
     float: left;
+    z-index: 10;
+    position: relative;
 }
 
 .serving {
